src/checkout-page/CheckOutPage.css
body {
    margin: 0;
    padding: 0;
}

h1 {
    margin: 4px 5px;
    text-align: center;
}

form {
    width: 90vw;
}

input {
    border: 1px solid;
    padding: 0.3em;
    min-height: 25px;
    border-radius: 10px;
}

textarea {
    min-height: 6em;
}

label {
    display: block;
    font-size: 1.2rem;
    margin-top: 5px;
}

select {
    font-size: 16px;
}

.wrapper {
    width: 88%;
    margin-left: 10%;
    border: 10px solid black;
}

.address-info>div {
    margin: 0;
}

.address-info {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.address-labels {
    text-align: left;
    margin-bottom: 2px;
    text-decoration: underline;
    margin-left: 18px;
}

.address-inputs {
    width: 85vw;
    /* margin-left: 15px; */
}

.flex-container-hor {
    display: flex;
    justify-content: space-evenly;
}

.flex-container-hor>div {
    padding: 10px;
    font-size: 30px;
}

.button {
    background-color: #04AA6D;
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: block;
    font-size: 16px;
    margin-top: 5px;
    cursor: pointer;
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.title {
    text-decoration: underline;
    text-align: center;
    margin-bottom: 0;
}

#map {
    /* Adjust the height as needed */
    height: 200px;
    /* Adjust the width as needed */
    width: 70%;
}

